show time table info in loads index

--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -24,6 +24,13 @@
     <td>(<%= load.hours %> hrs : <%= load.academic.short %>)</td>
     <td><%= load.title %></td>
   </tr>
+<tr>
+  <td></td>
+  <td>weeks <%= load.weeks %></td>
+<td style="font-size: smaller;">
+<%= load.times %>
+</td>
+</tr>
 <% end %>
 </table>
 </td>
