show time table info in loads index

--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -26,10 +26,8 @@
   </tr>
 <tr>
   <td></td>
-  <td>weeks <%= load.weeks %></td>
-<td style="font-size: smaller;">
-<%= load.times %>
-</td>
+  <td style="font-size: smaller;">weeks <%= load.weeks %></td>
+  <td style="font-size: smaller;"><%= load.times %></td>
 </tr>
 <% end %>
 </table>
