--- a/app/assets/stylesheets/screen/atoms.css.scss
+++ b/app/assets/stylesheets/screen/atoms.css.scss
@@ -13,7 +13,7 @@ td.year {
     width: 50%;
     vertical-align: top;
     border: 2px solid grey;
-    background-color: #f5f5ff;
+    background-color: rgb(245,245,255);
 }
 
 table.times {
