--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -9,6 +9,11 @@
 </ul>
 <% end %>
 
+<% @loads.group_by(&:semester).each do |semester, loads| %>
+  <h2>Semester <%= semester %>.</h2>
+  <%= render :partial => 'slots', :object => loads.map(&:slots).sum %>
+<% end %>
+
 
 <h2><%= @date %> (<%= @loads.map(&:hours).sum %> hrs)</h2>
 
@@ -73,10 +78,3 @@
 <% end %>
 </table>
 </div>
-
-<% @loads.group_by(&:semester).each do |semester, loads| %>
-<h2>Semester <%= semester %>.</h2>
-  <% times = loads.map(&:times_mlv) %>
-  <% times.delete("") %>
-  <%= long_times_table_for(times.join(";")) %>
-<% end %>
