--- a/app/views/loads/show.html.erb
+++ b/app/views/loads/show.html.erb
@@ -15,6 +15,10 @@ semester <%= @load.semester %>.
 
 <%= times_table_for(@load.times) %>
 
+<% if can? :update, @load %>
 <%= link_to 'Edit', edit_load_path(@load) %> |
+<% end %>
+<% if can? :destroy, @load %>
 <%= link_to 'Delete', @load, :confirm => 'Are you sure?', :method => :delete %> |
+<% end %>
 <%= link_to 'Back', loads_path %>
