styled and compressed academics view

--- a/app/assets/stylesheets/screen/atoms.css.scss
+++ b/app/assets/stylesheets/screen/atoms.css.scss
@@ -23,7 +23,9 @@ table.times {
 }
 
 td.times {
-    width: 80px;
+    font-size: small;
+    text-align: center;
+    width: 75px;
     height: 20px;
     border-left: 2px solid grey;
     border-top: 2px solid grey;
