added loads to navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,10 @@ MathJax.Hub.Config({
         <% end %>
       <% end %>
       <%= link_to 'Academics', academics_path %> |
-      <%= link_to 'Graduate Students', students_path %> |
-      <%= link_to 'Project Students', authors_path %> |
+      <%= link_to 'Postgrads', students_path %> |
+      <%= link_to 'Projects', authors_path %> |
       <%= link_to 'Modules', courses_path %> |
+      <%= link_to 'Loads', loads_path %> |
     </div>
     <div id="login"> |
       <% if user_signed_in? %>
