--- a/app/views/instances/edit.html.erb
+++ b/app/views/instances/edit.html.erb
@@ -5,5 +5,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @instance %> |
-<%= link_to 'Destroy', @instance, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Destroy', @instance, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', instances_path %>
