--- a/app/views/bonds/_form.html.erb
+++ b/app/views/bonds/_form.html.erb
@@ -11,13 +11,11 @@
     </div>
   <% end %>
 
+  <%= f.hidden_field :molecule_id %>
+
   <div class="field">
     <%= f.label :atom_id %><br />
-    <%= f.number_field :atom_id %>
-  </div>
-  <div class="field">
-    <%= f.label :molecule_id %><br />
-    <%= f.number_field :molecule_id %>
+    <%= f.select :atom_id, Atom.all.map { |x| [x, x.id] }, :include_blank => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
