add molecule_id to instance

--- a/app/views/instances/_form.html.erb
+++ b/app/views/instances/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= f.hidden_field :atom_id %>
+  <%= f.hidden_field :molecule_id %>
 
   <div class="field">
     <%= f.label :cohort %><br />
