added date to instance, code to slots.

--- a/app/views/instances/_form.html.erb
+++ b/app/views/instances/_form.html.erb
@@ -26,6 +26,10 @@
     <%= f.text_field :code %>
   </div>
   <div class="field">
+    <%= f.label :date %><br />
+    <%= f.number_field :date %>
+  </div>
+  <div class="field">
     <%= f.label :status %><br />
     <%= f.select :status, Instance::STATUSES, :include_blank => true %>
   </div>
