--- a/app/views/instances/_cohort.html.erb
+++ b/app/views/instances/_cohort.html.erb
@@ -1,19 +1,16 @@
 <h1><%= cohort %></h1>
 <ul>
-<% instances.group_by(&:code).each do |code, instances_by_code| %>
+<% instances.each do |instance| %>
 <li>
-<%= link_to code, instances_by_code.first.course %> (<%= instances_by_code.first.status %>):
-<% instances_by_code.each do |instance| %>
-    <%= link_to instance.atom.code, instance.atom %>
-<% end %>
+<%= link_to instance.molecule, instance.molecule %> (<%= instance.status %>)
 </li>
 <% end %>
 </ul>
 
 <% if @date %>
-<% loads_by_date = instances.map(&:atom).map(&:loads).sum.group_by(&:date)[@date] %>
-<% loads_by_date.group_by(&:semester).each do |semester, loads| %>
+<% slots_by_date = instances.group_by(&:date)[@date].map(&:slots).sum %>
+<% slots_by_date.group_by { |x| x[:load].semester }.each do |semester, slots| %>
   <h2>Timetable <%= academic_year_code(@date) %>, Semester <%= semester %>.</h2>
-  <%= render :partial => 'slots', :object => loads.map(&:slots).sum %>
+  <%= render :partial => 'slots', :object => slots %>
 <% end %>
 <% end %>
