--- a/app/views/molecules/_form.html.erb
+++ b/app/views/molecules/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :course_id %><br />
-    <%= f.number_field :course_id %>
+    <%= f.select :course_id, Course.all.map { |x| [x, x.id] }, :include_blank => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
