molecules have instances, not atoms

--- a/app/views/instances/new.html.erb
+++ b/app/views/instances/new.html.erb
@@ -1,7 +1,7 @@
 <h3>New instance</h3>
 
-<h1><%= @instance.atom %></h1>
+<h1><%= @instance.molecule %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', instances_path %>
+<%= link_to 'Back', @instance.molecule %>
