--- a/app/views/instances/edit.html.erb
+++ b/app/views/instances/edit.html.erb
@@ -6,4 +6,4 @@
 
 <%= link_to 'Show', @instance %> |
 <%= link_to 'Destroy', @instance, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Back', instances_path %>
+<%= link_to 'Back', @instance.molecule %>
