--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -42,6 +42,7 @@
 </div>
   <% end %>
 
+<% if @academic.proposals.any? %>
 <h3>Project Proposals</h3>
 <ul>
    <% @academic.proposals.each do |proposal| %>
@@ -54,6 +55,7 @@
     </li>
     <% end %>
 </ul>
+<% end %>
 
 <% if @active_directions.any? %>
   <h3>Project Supervision</h3>
