--- a/app/views/atoms/show.html.erb
+++ b/app/views/atoms/show.html.erb
@@ -17,7 +17,7 @@
 <%= @atom.semester %>.
 </p>
 
-<h3>Molecules</h3>
+<h3>Modules contributing to</h3>
 <ul>
 <% @atom.molecules.each do |molecule| %>
 <li>
